--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -115,7 +115,7 @@ if ( STARPU_FOUND )
     message("-- ${Blue}Add definition HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER${ColourReset}")
   else()
     if( CHAMELEON_USE_MPI_DATATYPES )
-      set( CHAMELEON_USE_MPI_DATATYPES OFF )
+      set( CHAMELEON_USE_MPI_DATATYPES OFF CACHE BOOL "Enable MPI datatypes whenever supported by the runtime" FORCE)
     endif()
   endif()
   check_function_exists(starpu_interface_copy2d HAVE_STARPU_INTERFACE_COPY2D)
@@ -192,6 +192,7 @@ else ( STARPU_FOUND )
       )
     message(FATAL_ERROR "StarPU library is required but has not been found")
   endif()
+  return()
 endif ( STARPU_FOUND )
 
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
