--- a/.gitlab/common.yml
+++ b/.gitlab/common.yml
@@ -61,6 +61,7 @@
              | tee -a ../${LOGNAME}.log")
     - lcov --directory build-$VERSION --capture --output-file ./${LOGNAME}.lcov
     - (cd build-$VERSION && lcov --directory . --capture --output-file ../bis_${LOGNAME}.lcov)
+    - xsltproc -o report.xml /home/gitlab/ctest-to-junit.xsl build-$VERSION/Testing/**/Test.xml
   except:
     - schedules
 
