--- a/include/chameleon/config.h.in
+++ b/include/chameleon/config.h.in
@@ -50,6 +50,7 @@
 
 /* Simulation */
 #cmakedefine CHAMELEON_SIMULATION
+#cmakedefine CHAMELEON_SIMULATION_EXTENDED
 
 /* getopt */
 #cmakedefine CHAMELEON_HAVE_GETOPT_H
