--- a/.gitlab/bench_plafrim.yml
+++ b/.gitlab/bench_plafrim.yml
@@ -7,36 +7,18 @@ bench_plafrim_bora_openmpi:
     JUBE_ID: "000001"
   extends: .bench_plafrim_common
 
-bench_plafrim_miriel_openmpi:
-  variables:
-    NODE: miriel
-    MPI: openmpi
-    SLURM_NP: 9
-    JUBE_ID: "000002"
-  extends: .bench_plafrim_common
-
-# Nmad segfaults for now, waiting for a stable version
-.bench_plafrim_bora_nmad:
+bench_plafrim_bora_nmad:
   variables:
     NODE: bora
     MPI: nmad
     SLURM_NP: 9
-    JUBE_ID: "000003"
+    JUBE_ID: "000002"
   extends: .bench_plafrim_common
 
-.bench_plafrim_miriel_nmad:
-  variables:
-    NODE: miriel
-    MPI: nmad
-    SLURM_NP: 9
-    JUBE_ID: "000004"
-  extends: .bench_plafrim_common
-
-# Chameleon+CUDA in Guix is not working yet
-.bench_plafrim_sirocco_openmpi:
+bench_plafrim_sirocco_openmpi:
   variables:
     NODE: sirocco
     MPI: openmpi
     SLURM_NP: 1
-    JUBE_ID: "000005"
+    JUBE_ID: "000003"
   extends: .bench_plafrim_common
