--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "hqr"]
 	path = hqr
 	url = https://gitlab.inria.fr/solverstack/hqr.git
+[submodule "doc/orgmode/org-html-themes"]
+	path = doc/orgmode/org-html-themes
+	url = https://github.com/fniessen/org-html-themes.git
