gepdf_qr: Add the algorithm and partial wrapper for the QR step algorithm used by QDWH/Zolo in polar decomposition iterations

--- a/compute/CMakeLists.txt
+++ b/compute/CMakeLists.txt
@@ -108,6 +108,7 @@ set(ZSRC
     pzgelqf.c
     pzgelqf_param.c
     pzgelqfrh.c
+    pzgepdf_qr.c
     pzgeqrf.c
     pzgeqrfrh.c
     pzgeqrf_param.c
@@ -153,6 +154,7 @@ set(ZSRC
     zgelqs_param.c
     zgeqrf.c
     zgeqrf_param.c
+    zgepdf_qr.c
     zgeqrs.c
     zgeqrs_param.c
     #zgesv.c
