flops.h: move this header to the main include directory in order to install it, and make it available to the lib

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -57,7 +57,7 @@ set(CHAMELEON_HDRS
   chameleon/tasks.h
   chameleon/timer.h
   chameleon/types.h
-  chameleon/types.h
+  chameleon/flops.h
   )
 
 # Add generated headers
