starpu/interface: Add StarPU interface filters

--- a/runtime/starpu/CMakeLists.txt
+++ b/runtime/starpu/CMakeLists.txt
@@ -188,6 +188,7 @@ set(RUNTIME_HDRS
   include/runtime_profiling.h
   include/runtime_workspace.h
   include/cham_tile_interface.h
+  include/cham_tile_filters.h
   )
 
 # Add generated headers
@@ -230,6 +231,7 @@ set(RUNTIME_COMMON
   control/runtime_profiling.c
   control/runtime_workspace.c
   interface/cham_tile_interface.c
+  interface/cham_tile_filters.c
   ${RUNTIME_COMMON_GENERATED}
   )
 
